hard-gists/6334787/run.log
=== Docker Run Log for 6334787 ===
Started at: Mi 29. Okt 16:28:34 CET 2025

[2025-10-29 16:28:34] START: Running container for 6334787
[2025-10-29 16:28:35] SUCCESS: Container d84e0c52f21b5806a7919b6942d648639158c575580ba6bcf2d07ecbdbb8ef14 started for 6334787
=== Container logs for 6334787 ===
  File "/snippet.py", line 47
    print "Preparing to connect. You might need to press the side button..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6334787 ===
[2025-10-29 16:28:37] INFO: Container d84e0c52f21b5806a7919b6942d648639158c575580ba6bcf2d07ecbdbb8ef14 has stopped
